test/golden/{helloCOLONf}.golden

INITIALPATH:7:22: error:
    • No instance for (Real String) arising from a use of ‘PyF.Internal.QQ.formatAnyFractional’
    • In the first argument of ‘putStrLn’, namely ‘((((((PyF.Internal.QQ.formatAnyFractional PyF.Formatters.Fixed) PyF.Formatters.Minus) Nothing) Nothing) (Just 6)) hello)’
      In the expression: putStrLn ((((((PyF.Internal.QQ.formatAnyFractional PyF.Formatters.Fixed) PyF.Formatters.Minus) Nothing) Nothing) (Just 6)) hello)
      In an equation for ‘main’: main = putStrLn ((((((PyF.Internal.QQ.formatAnyFractional PyF.Formatters.Fixed) PyF.Formatters.Minus) Nothing) Nothing) (Just 6)) hello)
  |
7 | main = putStrLn [fmt|{hello:f}|]
  |                      ^^^^^^^^^^^
